[package]
name = "tonicdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7.8", optional = true }
tokio-rustls = { version = "0.24.0", optional = true }
prost.workspace = true
prost-types = { version = "0.12", optional = true }

# 
[build-dependencies]
tonic-build.workspace = true
